fix(mixins): set height for horizontal scrollbar

--- a/src/less/demos/Less.stories.less
+++ b/src/less/demos/Less.stories.less
@@ -5,9 +5,10 @@
   height: 200px;
   border: 1px solid black;
 
-  .scrollbar();
+  .scrollbar(@x: overlay, @y: overlay);
 
   li {
     margin-right: 4px;
+    white-space: nowrap;
   }
 }
